// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigTestCases records issue-2991 exported tests should write relative paths to records 1`] = `
"{
  \\"chunks\\": {
    \\"byName\\": {
      \\"main\\": 179
    },
    \\"bySource\\": {},
    \\"usedIds\\": [
      179
    ]
  },
  \\"modules\\": {
    \\"byIdentifier\\": {
      \\"./test.js\\": 393,
      \\"external \\\\\\"fs\\\\\\"\\": 747,
      \\"external \\\\\\"path\\\\\\"\\": 622,
      \\"ignored|pkgs/somepackage/foo\\": 713
    },
    \\"usedIds\\": [
      393,
      622,
      713,
      747
    ]
  }
}"
`;

exports[`ConfigTestCases records issue-7339 exported tests should write relative dynamic-require paths to records 1`] = `
"{
  \\"chunks\\": {
    \\"byName\\": {
      \\"main\\": 179
    },
    \\"bySource\\": {},
    \\"usedIds\\": [
      179
    ]
  },
  \\"modules\\": {
    \\"byIdentifier\\": {
      \\"./dependencies/bar.js\\": 379,
      \\"./dependencies/foo.js\\": 117,
      \\"./dependencies|sync|/^\\\\\\\\.\\\\\\\\/.*$/\\": 412,
      \\"./test.js\\": 393,
      \\"external \\\\\\"fs\\\\\\"\\": 747,
      \\"external \\\\\\"path\\\\\\"\\": 622
    },
    \\"usedIds\\": [
      117,
      379,
      393,
      412,
      622,
      747
    ]
  }
}"
`;
